--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <title>Git</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+    <header>
+      <h1>Do You Git It?</h1>
+      <h2>All about Git</h2>
+    </header>
+    <main>
+      <article class="article">
+        <h3 class="article__title">What is Git?</h3>
+        <div class="article__summary">
+          <p>Git is a tool that helps people work together on coding projects. Everybody gets their own copy of the entire project to tinker with, and Git makes sure all the changes fit together nicely.
+        </p>
+        </div>
+        <a class="article__link" href="#">Read more</a>
+        <img class="article__picture" src="./images/pexels-realtoughcandycom-11035539.jpg" alt="The Git logo" />
+      </article>
+      <article class="article">
+        <h3 class="article__title">Why do developers need Git?</h3>
+        <div class="article__summary"><p>
+        Consider a team of authors working on a shared story without anyone coordinating them. Chaos! The plot tangles, details conflict: the story doesn't make any sense.</p>
+        <p>Git is like the book's editor, keeping track of every change. If a character's name suddenly switches or the plot takes an unexpected twist, Git can trace the exact line it went awry. Developers need Git to keep the story of their code consistent.</p>
+         </div>
+        <a class="article__link" href="#">Read more</a>
+        <img class="article__picture" src="./images/pexels-rfstudio-3810788.jpg" alt="People collaborating on a project" />
+      </article>
+      <article class="article">
+        <h3 class="article__title">What is a branch in Git?</h3>
+        <div class="article__summary"><p>
+         Imagine a repository as a big, growing tree and each new idea or feature as a new branch. In Git, a 'branch' is like an offshoot from the main trunk. It's a space to nurture new growth - new code - independently from the rest of the tree. You can cultivate your branch, tweaking and pruning it until it's exactly right.</p>
+         <p>A branch in Git lets you experiment fearlessly, knowing your main work is always safe.</p>
+        </p>
+         </div>
+        <a class="article__link" href="#">Read more</a>
+        <img class="article__picture" src="images/eduardo-soares-8yaDRP46do0-unsplash.jpg" alt="A tiny offshoot on a tree trunk" />
+      </article>  
+    </main>
+    <footer>
+      <h4>Created by: <a href="https://github.com/CodeYourFuture">Your Name</a></h4>
+    </footer>
 </body>
-</html
+</html>
