adds title of webpage

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="hero-section">
-        <h1>Title</h1>
+        <h1>Git Essentials: A Guide to Version Control for Developers</h1>
         <p>Description</p>
     </div>
 
