adds description of webpage

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="hero-section">
         <h1>Git Essentials: A Guide to Version Control for Developers</h1>
-        <p>Description</p>
+        <p><b>Git Essentials</b> is a beginner-friendly web application designed to explain the fundamental concepts of Git, the widely-used version control system. Learn what Git is, why developers rely on it for tracking changes, and how branching works to enable collaborative development. Whether you're new to Git or looking to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
     </div>
 
-    <p style="text-align: center;">===================================================================</p>
+    <p style="text-align: center;">===============================>====================================</p>
 
     <div class="first-article">
         <div>Article image</div>
