bolding 'Essentials' , adds article one image and footer

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -11,13 +11,16 @@
 <body>
     <div class="hero-section">
         <h1>Git Essentials: A Guide to Version Control for Developers</h1>
-        <p><b>Git Essentials</b> is a beginner-friendly web application designed to explain the fundamental concepts of Git, the widely-used version control system. Learn what Git is, why developers rely on it for tracking changes, and how branching works to enable collaborative development. Whether you're new to Git or looking to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
+        <p><b>Git Essentials</b> is a beginner-friendly web application designed to explain the fundamental concepts of
+            Git, the widely-used version control system. Learn what Git is, why developers rely on it for tracking
+            changes, and how branching works to enable collaborative development. Whether you're new to Git or looking
+            to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
     </div>
 
     <p style="text-align: center;">===============================>====================================</p>
 
     <div class="first-article">
-        <div>Article image</div>
+        <img src="images/git.webp"></img>
         <h3>Article Title</h3>
         <p>Article summary</p>
         <a>Read More</a>
@@ -34,19 +37,16 @@
             <p>Article summary</p>
             <a>Read More</a>
         </div>
-    
+
         <div class="third-article">
             <div>Article image</div>
             <h3>Article Title</h3>
             <p>Article summary</p>
             <a>Read More</a>
         </div>
-
-   
     </div>
-   
-      
 
+    <footer>&copy; 2024 EDA Technology. All rights reversed.</footer>
 </body>
 
 </html>
