adds first article title

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -21,7 +21,7 @@
 
     <div class="first-article">
         <img src="images/git.webp"></img>
-        <h3>Article Title</h3>
+        <h3>What is Git?</h3>
         <p>Article summary</p>
         <a>Read More</a>
     </div>
