adds first article summary

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -22,7 +22,10 @@
     <div class="first-article">
         <img src="images/git.webp"></img>
         <h3>What is Git?</h3>
-        <p>Article summary</p>
+        <p>Git is a distributed version control system designed to track changes in source code during software
+            development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
+            simultaneously without overwriting each other's contributions. It stores data in snapshots and enables easy
+            collaboration, branch creation, and change history tracking.</p>
         <a>Read More</a>
     </div>
 
