--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <div class="hero-section">
+    <header>
         <h1>Git Essentials: A Guide to Version Control for Developers</h1>
         <p><b>Git Essentials</b> is a beginner-friendly web application designed to explain the fundamental concepts of
             Git, the widely-used version control system. Learn what Git is, why developers rely on it for tracking
             changes, and how branching works to enable collaborative development. Whether you're new to Git or looking
             to refresh your knowledge, this guide offers clear, concise answers to essential Git questions.</p>
-    </div>
+    </header>
 
     <p style="text-align: center;">===============================>====================================</p>
 
@@ -26,7 +26,7 @@
             development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
             simultaneously without overwriting each other's contributions. It stores data in snapshots and enables easy
             collaboration, branch creation, and change history tracking.</p>
-        <a>Read More</a>
+        <a href="articles/what-is-git.html">Read More</a>
     </div>
 
 
