changes layout of webpage

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -19,14 +19,40 @@
 
     <p style="text-align: center;">===============================>====================================</p>
 
-    <div class="first-article">
-        <img src="images/git.webp"></img>
-        <h3>What is Git?</h3>
-        <p>Git is a distributed version control system designed to track changes in source code during software
-            development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
-            simultaneously without overwriting each other's contributions. It stores data in snapshots and enables easy
-            collaboration, branch creation, and change history tracking.</p>
-        <a href="articles/what-is-git.html">Read More</a>
+    <div class="articles">
+        <article>
+            <img src="images/git.webp"></img>
+            <h3>What is Git?</h3>
+            <p>Git is a distributed version control system designed to track changes in source code during software
+                development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
+                simultaneously without overwriting each other's contributions. It stores data in snapshots and enables
+                easy
+                collaboration, branch creation, and change history tracking.</p>
+            <a href="articles/what-is-git.html">Read More</a>
+        </article>
+
+        <article>
+            <img src="images/git.webp"></img>
+            <h3>What is Git?</h3>
+            <p>Git is a distributed version control system designed to track changes in source code during software
+                development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
+                simultaneously without overwriting each other's contributions. It stores data in snapshots and enables
+                easy
+                collaboration, branch creation, and change history tracking.</p>
+            <a href="articles/what-is-git.html">Read More</a>
+        </article>
+
+        <article>
+            <img src="images/git.webp"></img>
+            <h3>What is Git?</h3>
+            <p>Git is a distributed version control system designed to track changes in source code during software
+                development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
+                simultaneously without overwriting each other's contributions. It stores data in snapshots and enables
+                easy
+                collaboration, branch creation, and change history tracking.</p>
+            <a href="articles/what-is-git.html">Read More</a>
+        </article>
+
     </div>
 
 
@@ -35,10 +61,7 @@
 
     <div class="second-and-third-articles-section">
         <div class="second-article">
-            <div>Article image</div>
-            <h3>Article Title</h3>
-            <p>Article summary</p>
-            <a>Read More</a>
+           
         </div>
 
         <div class="third-article">
