adds second article

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -32,13 +32,12 @@
         </article>
 
         <article>
-            <img src="images/git.webp"></img>
-            <h3>What is Git?</h3>
-            <p>Git is a distributed version control system designed to track changes in source code during software
-                development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
-                simultaneously without overwriting each other's contributions. It stores data in snapshots and enables
-                easy
-                collaboration, branch creation, and change history tracking.</p>
+            <img src="images/developer.jpeg"></img>
+            <h3>Why do developers need Git?</h3>
+            <p>Developers need Git to efficiently manage, track, and collaborate on software projects. Git provides
+                version control, allowing teams to work on the same project without conflicts, roll back to previous
+                versions, and maintain a clear project history. It supports branching and merging, enabling developers
+                to work on different features simultaneously while ensuring code stability.</p>
             <a href="articles/what-is-git.html">Read More</a>
         </article>
 
