adds third article

--- a/my-wireframe/index.html
+++ b/my-wireframe/index.html
@@ -42,13 +42,12 @@
         </article>
 
         <article>
-            <img src="images/git.webp"></img>
-            <h3>What is Git?</h3>
-            <p>Git is a distributed version control system designed to track changes in source code during software
-                development. Created by Linus Torvalds in 2005, Git allows multiple developers to work on a project
-                simultaneously without overwriting each other's contributions. It stores data in snapshots and enables
-                easy
-                collaboration, branch creation, and change history tracking.</p>
+            <img src="images/branch.jpeg"></img>
+            <h3>What is a branch in Git?</h3>
+            <p>A branch in Git is a separate line of development, allowing developers to work on new features, bug
+                fixes, or experiments without affecting the main project. Branching enables parallel development, keeps
+                the main codebase stable, and simplifies merging changes back into the main branch once work is
+                complete.</p>
             <a href="articles/what-is-git.html">Read More</a>
         </article>
     </div>
