adds email input

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -21,6 +21,9 @@
       <label for="customer-name">Your Name: </label>
       <input type="text" name="customer-name" id="customer-name" minlength="2" required><br>
 
+      <label for="email">Your Email: </label>
+      <input type="email" name="email" id="email" required><br>
+
     </form>
 
   </main>
