--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -32,6 +32,16 @@
         <option value="red">Red</option>
       </select><br>
 
+      <!--Size options-->
+      <label for="customer-name">Choose Your Preferred Size: </label>
+      <select>
+        <option value="xs">XS</option>
+        <option value="s">S</option>
+        <option value="m">M</option>
+        <option value="l">L</option>
+        <option value="xl">XL</option>
+        <option value="xxl">XXL</option>
+      </select><br>
     </form>
 
   </main>
