--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -48,7 +48,8 @@
       <label for="delivery-date">Choose your delivery date (within the next 4 weeks):</label>
       <input type="date" id="delivery-date" name="delivery-date" min="2024-10-03" max="2024-10-31">
     </form>
-
+    <br><br>
+    <input type="submit" value="Submit">
   </main>
   <footer>
     <h2></h2>
