adds space between input fields

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -19,19 +19,22 @@
       <!-- write your html here-->
       <!-- try writing out the requirements first-->
       <label for="customer-name">Your Name: </label>
-      <input type="text" name="customer-name" id="customer-name" minlength="2" required><br>
+      <input type="text" name="customer-name" id="customer-name" minlength="2" required>
 
+      <br><br>
       <label for="email">Your Email: </label>
-      <input type="email" name="email" id="email" required><br>
+      <input type="email" name="email" id="email" required>
 
+      <br><br>
       <!--Color options-->
       <label for="customer-name">Choose Color Your Preferred: </label>
       <select>
         <option value="black">Black</option>
         <option value="white">White</option>
         <option value="red">Red</option>
-      </select><br>
+      </select>
 
+      <br><br>
       <!--Size options-->
       <label for="customer-name">Choose Your Preferred Size: </label>
       <select>
