--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -44,8 +44,9 @@
         <option value="l">L</option>
         <option value="xl">XL</option>
         <option value="xxl">XXL</option>
-      </select><br>
+      </select>
 
+      <br><br>
       <!--delivery date-->
       <label for="delivery-date">Choose your delivery date (within the next 4 weeks):</label>
       <input type="date" id="delivery-date" name="delivery-date" min="2024-10-03" max="2024-10-31">
