updates select  id for color options

--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -27,8 +27,9 @@
 
       <br><br>
       <!--Color options-->
-      <label for="customer-name">Choose Your Preferred Color: </label>
-      <select>
+
+      <label for="color-select">Choose Your Preferred Color: </label>
+      <select id="color-select", name="color">
         <option value="black">Black</option>
         <option value="white">White</option>
         <option value="red">Red</option>
@@ -36,8 +37,9 @@
 
       <br><br>
       <!--Size options-->
-      <label for="customer-name">Choose Your Preferred Size: </label>
+
       <select>
+        <label for="customer-name">Choose Your Preferred Size: </label>
         <option value="xs">XS</option>
         <option value="s">S</option>
         <option value="m">M</option>
