--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -37,9 +37,8 @@
 
       <br><br>
       <!--Size options-->
-
-      <select>
-        <label for="customer-name">Choose Your Preferred Size: </label>
+      <label for="size-select">Choose Your Preferred Size: </label>
+      <select id="size-select" name="size">
         <option value="xs">XS</option>
         <option value="s">S</option>
         <option value="m">M</option>
