Update wire frame

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,11 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feature / Wireframe</title>
+    <title>What is Git?</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- Add your HTML markup here -->
+       <div class="hero">
+        <header>
+          <h1>Git</h1>
+          <p>A Distributed Version Control System</p>
+          <img src="/Wireframe/git.png" alt="A git logo">
+        </header>
+      </div>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
