--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Add your HTML markup here -->
        <div class="hero">
-        <header>
+        <header class="container">
           <h1>Git</h1>
           <p>A Distributed Version Control System</p>
           <img src="/Wireframe/git.png" alt="A git logo">
