Commit page edit

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is Git?</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -14,7 +17,29 @@
           <p>A Distributed Version Control System</p>
           <img src="/Wireframe/git.png" alt="A git logo">
         </header>
+        <article class="container cont-art">
+          <h2>What is Git?</h2>
+          <p>It is a version control software platform for developers to create and manage different versions of a project. We end up creating different versions of a project overtime through commits. A commit is sort of a snapshot of the project at a particular point in time. Commits are like particular versions of the project at particular times. Basically Git is a tool/platform for teams to store the history of  different versions of their project.</p>
+          <h3>Summary</h3>
+          <p>Git uses commits to store: What changed in a particular commit, who created the change, what time the change happened and what was the previous commit. These changes would take place on a project and history and these projects are called repositories. </p>
+        </article>
+        <a href="#" class="btn">Read More</a>
       </div>
+      <div class="hero-1">
+        <article class="container">
+          <h2>Why do Developers Need Git?</h2>
+            <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users.</p>
+        </article>
+
+        <article class="container">
+          <h2>What is a branch Git?</h2>
+
+        </article>
+      </div>
+      
+      <footer>
+
+      </footer>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
