Update page content / color

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -26,15 +26,20 @@
         <a href="#" class="btn">Read More</a>
       </div>
       <div class="hero-1">
-        <article class="container">
+        <div class="item">
+        <article>
           <h2>Why do Developers Need Git?</h2>
-            <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users.</p>
+            <p>One of the biggest advantages of Git is its branching capabilities. Unlike centralized version control systems, Git branches are cheap and easy to merge. This facilitates the feature branch workflow popular with many Git users. <br><br> Feature branches provide an isolated environment for every change to your codebase. When a developer wants to start working on something—no matter how big or small—they create a new branch. This ensures that the main branch always contains production-quality code. <br><br> Using feature branches is not only more reliable than directly editing production code, but it also provides organizational benefits. They let you represent development work at the same granularity as your agile backlog. For example, you might implement a policy where each Jira ticket is addressed in its own feature branch.</p>
         </article>
-
-        <article class="container">
-          <h2>What is a branch Git?</h2>
-
+        <a href="#" class="btn btn-2">Read More</a>
+      </div>
+      <div class="item">
+        <article>
+          <h2>What is a branch in Git?</h2>
+            <p>Git branches are effectively a pointer to a snapshot of your changes. When you want to add a new feature or fix a bug—no matter how big or how small—you spawn a new branch to encapsulate your changes. This makes it harder for unstable code to get merged into the main code base, and it gives you the chance to clean up your future's history before merging it into the main branch. <br><br>The implementation behind Git branches is much more lightweight than other version control system models. Instead of copying files from directory to directory, Git stores a branch as a reference to a commit. In this sense, a branch represents the tip of a series of commits—it's not a container for commits. The history for a branch is extrapolated through the commit relationships.<br><br>Always take note that Git branches aren't like SVN branches. Whereas SVN branches are only used to capture the occasional large-scale development effort, Git branches are an integral part of your everyday workflow. The following content will expand on the internal Git branching architecture.</p>
         </article>
+        <a href="#" class="btn btn-3">Read More</a>
+      </div>
       </div>
       
       <footer>
