--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wireframe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <header>
+      <h1 class="title">Title</h1>
+      <p class="description">Description</p>
+    </header>
+
+    <main>
+      <section>
+        <article class="what-is-git">
+          <h2 class="article-title">Article title</h2>
+          <p class="article-summary">Summary</p>
+          <a class="article-link" href="#">
+            <button class="article-btn">Button</button>
+          </a>
+        </article>
+        
+        <article class="why">
+          <h2 class="article-title">Article title</h2>
+          <p class="article-summary">Summary</p>
+          <a class="article-link" href="#">
+            <button class="article-btn">Button</button>
+          </a>
+        </article>
+
+        <article class="what-is-a-branch">
+          <h2 class="article-title">Article title</h2>
+          <p class="article-summary">Summary</p>
+          <a class="article-link" href="#">
+            <button class="article-btn">Button</button>
+          </a>
+        </article>
+
+      </section>
+    </main>
+
+    <footer>
+      <p class="footer-text"></p>
+    </footer>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
