Header content added and styling done

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -3,35 +3,40 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Wireframe</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <h1 class="title">Title</h1>
-      <p class="description">Description</p>
+    <header class="header">
+      <div class="container">
+        <h1 class="heading-primary">Understanding Git</h1>
+        <p class="header-text">A developers #1 tool</p>
+      </div>
     </header>
 
     <main>
-      <section>
-        <article class="what-is-git">
-          <h2 class="article-title">Article title</h2>
+      <section class="section-article">
+        <article class="article-what-git">
+          <h2 class="heading-secondary">Article title</h2>
           <p class="article-summary">Summary</p>
           <a class="article-link" href="#">
             <button class="article-btn">Button</button>
           </a>
         </article>
         
-        <article class="why">
-          <h2 class="article-title">Article title</h2>
+        <article class="article-why-git">
+          <h2 class="heading-secondary">Article title</h2>
           <p class="article-summary">Summary</p>
           <a class="article-link" href="#">
             <button class="article-btn">Button</button>
           </a>
         </article>
 
-        <article class="what-is-a-branch">
-          <h2 class="article-title">Article title</h2>
+        <article class="article-what-branch">
+          <h2 class="heading-secondary">Article title</h2>
           <p class="article-summary">Summary</p>
           <a class="article-link" href="#">
             <button class="article-btn">Button</button>
