Styling on article elements. Font sizes/spacing/colour.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -12,35 +12,42 @@
   <body>
     <header class="header">
       <div class="container">
-        <h1 class="heading-primary">Understanding Git</h1>
-        <p class="header-text">A developers #1 tool</p>
+        <h1 class="heading-primary center">Understanding Git</h1>
+        <p class="header-text center">A developers #1 tool</p>
       </div>
     </header>
 
     <main>
       <section class="section-article">
-        <article class="article-what-git">
-          <h2 class="heading-secondary">Article title</h2>
-          <p class="article-summary">Summary</p>
-          <a class="article-link" href="#">
-            <button class="article-btn">Button</button>
-          </a>
-        </article>
-        
-        <article class="article-why-git">
-          <h2 class="heading-secondary">Article title</h2>
-          <p class="article-summary">Summary</p>
-          <a class="article-link" href="#">
-            <button class="article-btn">Button</button>
-          </a>
+        <article class="article article-what-git">
+          <div class="container">
+            <h2 class="heading-secondary">Article title</h2>
+            <p class="article-summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi nam voluptas odio quam veniam nostrum fugit. Eaque, voluptatum aspernatur. Optio non ipsum recusandae facilis ratione suscipit aliquam iusto magnam mollitia.</p>
+            <a class="article-link" href="#">
+              Read more
+            </a>
+          </div>
         </article>
 
-        <article class="article-what-branch">
-          <h2 class="heading-secondary">Article title</h2>
-          <p class="article-summary">Summary</p>
-          <a class="article-link" href="#">
-            <button class="article-btn">Button</button>
-          </a>
+        
+        <article class="article article-why-git">
+          <div class="container">
+            <h2 class="heading-secondary">Article title</h2>
+            <p class="article-summary">Summary</p>
+            <a class="article-link" href="#">
+              Read more
+            </a>
+          </div>
+         </article>
+
+        <article class="article article-what-branch">
+          <div class="container">
+            <h2 class="heading-secondary">Article title</h2>
+            <p class="article-summary">Summary</p>
+            <a class="article-link" href="#">
+              Read more
+            </a>
+          </div>
         </article>
 
       </section>
