--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -44,7 +44,7 @@
       
       <footer>
           <div>
-            <p>CopyRight: 2024, Cape Town, South Africa </p>
+            <p>© Copy Right: 2024, Cape Town, South Africa </p>
           </div>
       </footer>
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
