Footer styling done.
Link styling done.

Content added. Links added and target set as _blank.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -21,9 +21,10 @@
       <section class="section-article">
         <article class="article article-what-git">
           <div class="container">
-            <h2 class="heading-secondary">Article title</h2>
-            <p class="article-summary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi nam voluptas odio quam veniam nostrum fugit. Eaque, voluptatum aspernatur. Optio non ipsum recusandae facilis ratione suscipit aliquam iusto magnam mollitia.</p>
-            <a class="article-link" href="#">
+            <h2 class="heading-secondary">What is Git?</h2>
+            <p class="article-summary">
+              Git is version control software that allows developers to create and manage different versions of a project.</p>
+            <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
               Read more
             </a>
           </div>
@@ -32,9 +33,11 @@
         
         <article class="article article-why-git">
           <div class="container">
-            <h2 class="heading-secondary">Article title</h2>
-            <p class="article-summary">Summary</p>
-            <a class="article-link" href="#">
+            <h2 class="heading-secondary">Why do developers need Git?</h2>
+            <p class="article-summary">
+              Git allows developers to share the history of the project between different users and different computers.
+            </p>
+            <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
               Read more
             </a>
           </div>
@@ -42,9 +45,9 @@
 
         <article class="article article-what-branch">
           <div class="container">
-            <h2 class="heading-secondary">Article title</h2>
-            <p class="article-summary">Summary</p>
-            <a class="article-link" href="#">
+            <h2 class="heading-secondary">What is a branch in Git?</h2>
+            <p class="article-summary">A branch is a sequence of commits in a project. It represents a particular history of development in a project - the different versions there have been.</p>
+            <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#branching" target="_blank">
               Read more
             </a>
           </div>
@@ -53,10 +56,10 @@
       </section>
     </main>
 
-    <footer>
-      <p class="footer-text"></p>
+    <footer class="footer">
+      <div class="container center">
+        <p class="footer-text">Here is my footer</p>
+      </div>
     </footer>
-    <!-- Add your HTML markup here -->
-    <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
 </body>
 </html
