Content updated --Article summaries updated.
Added grids to section-articles.

Added folder img. Added 3 images for articles.

Styling added to article:first-child.

--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -19,40 +19,56 @@
 
     <main>
       <section class="section-article">
-        <article class="article article-what-git">
-          <div class="container">
-            <h2 class="heading-secondary">What is Git?</h2>
-            <p class="article-summary">
-              Git is version control software that allows developers to create and manage different versions of a project.</p>
-            <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
-              Read more
-            </a>
-          </div>
-        </article>
-
+        <div class="container grid grid--article">
+          <article class="article article-what-git">
+            <div class="grid grid--3-row">
+              <img class="article-img" src="/img/article-1.png" alt="Git logo">
+              <div>
+                <h2 class="heading-secondary">What is Git?</h2>
+                <p class="article-summary">
+                  Git is a tool that developers use to manage and organize their code. It tracks all changes made to a project, allowing multiple people to work on the same code without confusion. Git also helps developers keep a history of their work, test new features, and collaborate smoothly.</p>
+              </div>
+              <div class="link-container">
+                <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
+                  Read more
+                </a>
+              </div>
+            </div>
+          </article>
+          
+          <article class="article article-why-git">
+            <div class="grid grid--3-row">
+              <img class="article-img" src="/img/article-2.jpg" alt="Computer screen with code on it">
+              <div>
+                <h2 class="heading-secondary">Why do developers need Git?</h2>
+                <p class="article-summary">
+                  Developers needs Git to manage and keep track of changes in their code. It allows teams to work together without messing up each other's work, easily go back to previous versions, and test new ideas safely. It's also used to review and improve code before it's released.
+                </p>
+              </div>
+              <div class="link-container">
+                <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
+                  Read more
+                </a>
+              </div>
+            </div>
+           </article>
+  
+          <article class="article article-what-branch">
+            <div class="grid grid--3-row">
+              <img class="article-img" src="/img/article-3.jpg" alt="Sceenshot of Git branch">
+              <div>
+                <h2 class="heading-secondary">What is a branch in Git?</h2>
+                <p class="article-summary">A branch in Git is like a copy of the main project where developers can try new things without changing the original. They can work on updates or fixes separately, and once everything is ready, they can add their changes back to the main project.</p>
+              </div>
+              <div class="link-container">
+                <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#branching" target="_blank">
+                  Read more
+                </a>
+              </div>
+            </div>
+          </article>
+        </div>
         
-        <article class="article article-why-git">
-          <div class="container">
-            <h2 class="heading-secondary">Why do developers need Git?</h2>
-            <p class="article-summary">
-              Git allows developers to share the history of the project between different users and different computers.
-            </p>
-            <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
-              Read more
-            </a>
-          </div>
-         </article>
-
-        <article class="article article-what-branch">
-          <div class="container">
-            <h2 class="heading-secondary">What is a branch in Git?</h2>
-            <p class="article-summary">A branch is a sequence of commits in a project. It represents a particular history of development in a project - the different versions there have been.</p>
-            <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#branching" target="_blank">
-              Read more
-            </a>
-          </div>
-        </article>
-
       </section>
     </main>
 
