--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Wireframe</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="header">
@@ -22,53 +25,91 @@
         <div class="container grid grid--article">
           <article class="article article-what-git">
             <div class="grid grid--3-row">
-              <img class="article-img" src="/img/article-1.png" alt="Git logo">
+              <img
+                class="article-img"
+                src="/img/article-1.png"
+                alt="Git logo"
+              />
               <div>
                 <h2 class="heading-secondary">What is Git?</h2>
                 <p class="article-summary">
-                  Git is a tool that developers use to manage and organize their code. It tracks all changes made to a project, allowing multiple people to work on the same code without confusion. Git also helps developers keep a history of their work, test new features, and collaborate smoothly.</p>
+                  Git is a tool that developers use to manage and organize their
+                  code. It tracks all changes made to a project, allowing
+                  multiple people to work on the same code without confusion.
+                  Git also helps developers keep a history of their work, test
+                  new features, and collaborate smoothly.
+                </p>
               </div>
               <div class="link-container">
-                <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
+                <a
+                  class="article-link"
+                  href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control"
+                  target="_blank"
+                >
                   Read more
                 </a>
               </div>
             </div>
           </article>
-          
+
           <article class="article article-why-git">
             <div class="grid grid--3-row">
-              <img class="article-img" src="/img/article-2.jpg" alt="Computer screen with code on it">
+              <img
+                class="article-img"
+                src="/img/article-2.jpg"
+                alt="Computer screen with code on it"
+              />
               <div>
                 <h2 class="heading-secondary">Why do developers need Git?</h2>
                 <p class="article-summary">
-                  Developers needs Git to manage and keep track of changes in their code. It allows teams to work together without messing up each other's work, easily go back to previous versions, and test new ideas safely. It's also used to review and improve code before it's released.
+                  Developers needs Git to manage and keep track of changes in
+                  their code. It allows teams to work together without messing
+                  up each other's work, easily go back to previous versions, and
+                  test new ideas safely. It's also used to review and improve
+                  code before it's released.
                 </p>
               </div>
               <div class="link-container">
-                <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control" target="_blank">
+                <a
+                  class="article-link"
+                  href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#version-control"
+                  target="_blank"
+                >
                   Read more
                 </a>
               </div>
             </div>
-           </article>
-  
+          </article>
+
           <article class="article article-what-branch">
             <div class="grid grid--3-row">
-              <img class="article-img" src="/img/article-3.jpg" alt="Sceenshot of Git branch">
+              <img
+                class="article-img"
+                src="/img/article-3.jpg"
+                alt="Sceenshot of Git branch"
+              />
               <div>
                 <h2 class="heading-secondary">What is a branch in Git?</h2>
-                <p class="article-summary">A branch in Git is like a copy of the main project where developers can try new things without changing the original. They can work on updates or fixes separately, and once everything is ready, they can add their changes back to the main project.</p>
+                <p class="article-summary">
+                  A branch in Git is like a copy of the main project where
+                  developers can try new things without changing the original.
+                  They can work on updates or fixes separately, and once
+                  everything is ready, they can add their changes back to the
+                  main project.
+                </p>
               </div>
               <div class="link-container">
-                <a class="article-link" href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#branching" target="_blank">
+                <a
+                  class="article-link"
+                  href="https://programming.codeyourfuture.io/user-data/sprints/1/prep/#branching"
+                  target="_blank"
+                >
                   Read more
                 </a>
               </div>
             </div>
           </article>
         </div>
-        
       </section>
     </main>
 
@@ -77,5 +118,5 @@
         <p class="footer-text">Here is my footer</p>
       </div>
     </footer>
-</body>
-</html
+  </body>
+</html>
